--- a/example.yaml
+++ b/example.yaml
@@ -7,7 +7,7 @@ limits:
     interval: 15
     max: 200
     keys:
-      - 'headers:authentication'
+      - header: "Authentication"
     matches:
       headers:
         - name: "Authentication"
@@ -23,7 +23,7 @@ limits:
     interval: 15
     max: 200
     keys:
-      - 'header:authentication'
+      - header: "Authentication"
     matches:
       paths:
         match_any:
@@ -36,7 +36,7 @@ limits:
     interval: 15
     max: 200
     keys:
-      - 'header:authentication'
+      - header: "Authentication"
     matches:
       headers:
         - name: "Authentication"
@@ -50,7 +50,7 @@ limits:
     interval: 15
     max: 200
     keys:
-      - 'header:authentication'
+      - header: "Authentication"
     matches:
       headers:
         - name: "Authentication"
