--- a/example.yaml
+++ b/example.yaml
@@ -24,7 +24,7 @@ limits:
           - name: "X-Forwarded-For"
       paths:
         match_any:
-          - "/v1.1/special/resources/.*"
+          - "/special/resources/.*"
 
   basic-special:
     interval: 15
@@ -35,13 +35,13 @@ limits:
     matches:
       paths:
         match_any:
-          - "/v1.1/special/resources/.*"
+          - "/special/resources/.*"
       headers:
         match_any:
           - name: "Authorization"
             match: "Basic.*"
 
-  bearer-easy:
+  bearer-simple:
     interval: 15
     max: 200
     keys:
@@ -55,9 +55,9 @@ limits:
     excludes:
       paths:
         match_any:
-          - "/v1.1/special/resources/.*"
+          - "/special/resources/.*"
 
-  basic-easy:
+  basic-simple:
     interval: 15
     max: 200
     keys:
@@ -71,4 +71,4 @@ limits:
     excludes:
       paths:
         match_any:
-          - "/v1.1/special/resources/.*"
+          - "/special/resources/.*"
