--- a/example.yaml
+++ b/example.yaml
@@ -4,7 +4,7 @@ proxy:
   listen: :8080
 
 storage:
-  type: redis  # can be {redis,memory}
+  type: memory  # can be {redis,memory}
   host: localhost  # not required for memory
   port: 6379  # not required for memory
 
