--- a/deb/sphinx/etc/sphinx/sphinx.yaml
+++ b/deb/sphinx/etc/sphinx/sphinx.yaml
@@ -1,7 +1,8 @@
+# Validate this file by running `bin/sphinxd --validate /path/to/conf`
 proxy:
   handler: http  # can be {http, httplogger}
   host: https://httpbin.org
-  listen: :6634
+  listen: :6634  # height of the Great Sphinx of Giza
 
 storage:
   type: redis     # can be {redis, memory}
