deb: log to syslog

--- a/deb/sphinx/etc/init/sphinx.conf
+++ b/deb/sphinx/etc/init/sphinx.conf
@@ -8,5 +8,5 @@ script
     if [ -f /etc/default/$UPSTART_JOB ]; then
         . /etc/default/$UPSTART_JOB
     fi
-    sphinxd $SPHINXD_OPTS
+    sphinxd $SPHINXD_OPTS 2>&1 | logger -p local1.info -t sphinx
 end script
