--- a/deb/sphinx/etc/init/sphinx.conf
+++ b/deb/sphinx/etc/init/sphinx.conf
@@ -3,6 +3,8 @@ start on (filesystem and net-device-up)
 chdir /var/lib/sphinx
 console log
 
+respawn
+
 script
     SPHINXD_OPTS="--config=/etc/sphinx/sphinx.yaml"
     if [ -f /etc/default/$UPSTART_JOB ]; then
