--- a/.drone.yml
+++ b/.drone.yml
@@ -17,7 +17,7 @@ publish:
     script: make deb
     artifacts:
       - deb/sphinxd.deb
-    tag: $(shell cat deb/sphinx/DEBIAN/control | grep Version | cut -d " " -f 2)
+    tag: $(cat deb/sphinx/DEBIAN/control | grep Version | cut -d " " -f 2)
     token: {{ github_token }}
     user: Clever
     repo: sphinx
