--- a/.drone.yml
+++ b/.drone.yml
@@ -16,8 +16,8 @@ publish:
     branch: update-makefile
     script: make deb
     artifacts:
-      - deb/sphinxd.deb
+      - deb/sphinx.deb
     tag: $(cat deb/sphinx/DEBIAN/control | grep Version | cut -d " " -f 2)
-    token: {{ github_token }}
+    token: {{github_token}}
     user: Clever
     repo: sphinx
