config: Change Health to be HealthCheck.

--- a/example.yaml
+++ b/example.yaml
@@ -9,7 +9,7 @@ storage:
   host: localhost # redis hostname. not required for memory
   port: 6379      # redis port.     not required for memory
 
-health:
+health-check:
   port: 60002
   endpoint: "/health/check"
 
