--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -1,29 +1,6 @@
-
-# Gopkg.toml example
-#
-# Refer to https://github.com/golang/dep/blob/master/docs/Gopkg.toml.md
-# for detailed Gopkg.toml documentation.
-#
-# required = ["github.com/user/thing/cmd/thing"]
-# ignored = ["github.com/user/project/pkgX", "bitbucket.org/user/project/pkgA/pkgY"]
-#
-# [[constraint]]
-#   name = "github.com/user/project"
-#   version = "1.0.0"
-#
-# [[constraint]]
-#   name = "github.com/user/project2"
-#   branch = "dev"
-#   source = "github.com/myfork/project2"
-#
-# [[override]]
-#  name = "github.com/x/y"
-#  version = "2.4.0"
-
-
 [[constraint]]
   name = "github.com/Clever/leakybucket"
-  revision = "e71c0c5ef35405c601ade74f6c02b71aa68b8d0d"
+  version = "1.0.0"
 
 [[constraint]]
   name = "github.com/pborman/uuid"
@@ -42,3 +19,7 @@
 [[constraint]]
   name = "gopkg.in/tylerb/graceful.v1"
   version = "1.2.15"
+
+[[constraint]]
+  name = "github.com/aws/aws-sdk-go"
+  version = "1.29.32"
