update docs to include dynamo config

--- a/deb/sphinx/etc/sphinx/sphinx.yaml
+++ b/deb/sphinx/etc/sphinx/sphinx.yaml
@@ -5,9 +5,11 @@ proxy:
   listen: :6634  # height of the Great Sphinx of Giza
 
 storage:
-  type: redis     # can be {redis, memory}
-  host: localhost # not required for memory
-  port: 6379      # not required for memory
+  type: redis       # must be one of {redis, dynamodb, memory}
+  host: localhost   # redis hostname. required for redis
+  port: 6379        # redis port.     required for redis
+  table: table      # table name.     required for dynamodb
+  region: us-west-1 # table region.   required for dynamodb
 
 limits:
   sample-limit:
