--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -1,6 +1,11 @@
+
 [[constraint]]
   name = "github.com/Clever/leakybucket"
   version = "1.1.0"
+
+[[constraint]]
+  name = "github.com/aws/aws-sdk-go"
+  version = "1.29.32"
 
 [[constraint]]
   name = "github.com/pborman/uuid"
@@ -10,16 +15,12 @@
 
 [[constraint]]
   name = "gopkg.in/Clever/kayvee-go.v6"
-  version = "6.6.0"
-
-[[constraint]]
-  branch = "v1"
-  name = "gopkg.in/yaml.v1"
+  version = "=6.24.0"
 
 [[constraint]]
   name = "gopkg.in/tylerb/graceful.v1"
   version = "1.2.15"
 
 [[constraint]]
-  name = "github.com/aws/aws-sdk-go"
-  version = "1.29.32"
+  branch = "v1"
+  name = "gopkg.in/yaml.v1"
