--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,9 +1,8 @@
 version: 2
 jobs:
   build:
-    working_directory: /go/src/github.com/Clever/sphinx
     docker:
-      - image: circleci/golang:1.13-stretch
+      - image: circleci/golang:1.15
     environment:
       CIRCLE_ARTIFACTS: /tmp/circleci-artifacts
       CIRCLE_TEST_REPORTS: /tmp/circleci-test-results
@@ -12,12 +11,18 @@ jobs:
           command: cd $HOME && git clone --depth 1 -v https://github.com/Clever/ci-scripts.git && cd ci-scripts && git show --oneline -s
           name: Clone ci-scripts
       - checkout
+      - restore_cache:
+          keys:
+          - go-mod-v1-{{ checksum "go.sum" }}
       - setup_remote_docker
       - run:
           command: mkdir -p $CIRCLE_ARTIFACTS $CIRCLE_TEST_REPORTS
           name: Set up CircleCI artifacts directories
-      - run: make install_deps
       - run: make build
       - run: make test
       - run: $HOME/ci-scripts/circleci/docker-publish $DOCKER_USER $DOCKER_PASS "$DOCKER_EMAIL" $DOCKER_ORG
       - run: if [ "${CIRCLE_BRANCH}" == "master" ]; then make VERSION && make deb && cp deb/sphinx.deb sphinx-amd64.deb && $HOME/ci-scripts/circleci/github-release $GH_RELEASE_TOKEN sphinx-amd64.deb; fi;
+      - save_cache:
+          key: go-mod-v1-{{ checksum "go.sum" }}
+          paths:
+          - "/go/pkg/mod"
